[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "wireboard-api"
version = "1.0.1"
description = "Official Python SDK for the WireBoard REST and Live (SSE) APIs."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "WireBoard" }]
keywords = ["wireboard", "analytics", "sse", "real-time", "sdk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "typing-extensions>=4.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "mypy>=1.10",
    "ruff>=0.5",
]
examples = [
    "flask>=3.0",
    "python-dotenv>=1.0",
]

[project.scripts]
wireboard-api = "wireboard_api.cli:main"

[project.urls]
Homepage = "https://github.com/wireboard/api-py"
Documentation = "https://wireboard.io/docs/api-overview"
Repository = "https://github.com/wireboard/api-py"
Issues = "https://github.com/wireboard/api-py/issues"
Changelog = "https://github.com/wireboard/api-py/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["wireboard_api"]

[tool.hatch.build.targets.sdist]
# Ship only what a downstream package consumer needs to read or build from
# source. The repo-only directories (examples/, scripts/, tests/) live on
# GitHub; including them here would duplicate them and — worse — would ship
# orphan README.md files inside them whose own contents reference files that
# aren't in the sdist.
include = [
    "wireboard_api",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]
exclude = [
    "examples",
    "scripts",
    "tests",
    ".env",
    ".env.*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: tests that take more than a few seconds (rotation/reconnect timing)",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]
